objects/VCG_CPQ_Quote_Product__c.object
<CustomObject>
    <fields>
        <fullName>Renewal_Amount__c</fullName>
        <formula>IF(TEXT(Line_Type__c) = 'Renewal' &amp;&amp; Asset_Quantity__c &gt; 0 &amp;&amp; Asset_Quantity__c &gt; License_Metric_Quantity__c , License_Metric_Quantity__c * (Previous_Asset_Price__c/Asset_Quantity__c), 

IF(TEXT(Line_Type__c) = 'Renewal' &amp;&amp; Asset_Quantity__c &gt; 0 &amp;&amp; OR(Asset_Quantity__c &lt; License_Metric_Quantity__c, Asset_Quantity__c = License_Metric_Quantity__c), Asset_Quantity__c * (Previous_Asset_Price__c/Asset_Quantity__c), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SaaS_vs_Non_SaaS__c</fullName>
        <formula>IF(ISPICKVAL(Product__r.Product_Type__c, "Software"), "SaaS", "Non-SaaS")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SaaS vs Non-SaaS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_Quote_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup Fee Quote Product</label>
        <referenceTo>VCG_CPQ_Quote_Product__c</referenceTo>
        <relationshipLabel>Quote Products (Quote Product)</relationshipLabel>
        <relationshipName>Quote_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Amount__c</fullName>
        <label>Term Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Overage_Fee__c</fullName>
        <label>Test Overage Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Percent__c</fullName>
        <label>Total Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_StarCite__c</fullName>
        <label>Type (StarCite)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Band</fullName>
                </value>
                <value>
                    <fullName>Paygo</fullName>
                </value>
                <value>
                    <fullName>PrePaid</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Per Reg</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift_Amount__c</fullName>
        <label>Uplift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uplift_Entered_As__c</fullName>
        <label>Uplift Entered As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift_Percentage__c</fullName>
        <label>Uplift Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upsell_or_Cross_Sale__c</fullName>
        <label>Upsell or Cross-Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Revenue_Commission__c</fullName>
        <label>Web Revenue Commission %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2_Quantity__c</fullName>
        <label>Year 2 Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_Term_Amount__c</fullName>
        <label>Year 2 Term Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Quantity__c</fullName>
        <label>Year 3 Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_Term_Amount__c</fullName>
        <label>Year 3 Term Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zone_Level__c</fullName>
        <label>Zone Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Quote Product</label>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>